[package]
name = "reference-interval"
version = "0.1.3"
edition = "2024"
authors = ["Joel Parker Henderson <joel@joelparkerhenderson.com>"]
description = "reference-interval: Rust crate of reference interval helpers a.k.a. reference range helpers."
readme = "README.md"
repository = "https://github.com/sixarm/reference-interval-rust-crate/"
license = "MIT OR Apache-2.0 OR GPL-2.0 OR GPL-3.0 OR BSD-3-Clause"
keywords = ["metrics", "measurements", "sample", "data"]
categories = ["data-structures", "mathematics"]
include = ["src/**/*", "LICENSE.md", "README.md"]

[dependencies]
rand = "0.9.0"
rand_distr = "0.5.1"
num-traits = "0.2.19"
serde = { version = "1.0.219", features = ["derive"] }

